# git-stargazer

./: .env.example  .gitignore  CONTEXT.md  README.md  commit_timestamps.json  hello.py  pyproject.toml
.github/workflows/: generate_report.yml
docs/: index.html  recent_commits_latest.json  recent_commits_latest.md
docs/adr/: 0001-commit-feed-owns-the-freshness-protocol.md
src/: cache_manager.py  commit_feed.py  config.py  genereate_starred_list.py  github_client.py  log.py  main.py  pipeline.py  report.py  report_generator.py  selection.py  summarizer.py
tests/: test_commit_feed.py  test_config.py  test_github_client.py  test_pipeline.py  test_report.py  test_selection.py  test_summarizer.py
