[project]
name = "git-stargazer"
version = "0.1.0"
description = "Generate activity reports for starred GitHub repositories"
requires-python = ">=3.13"

dependencies = [
    "httpx[http2]>=0.27.2",
    "litellm",
]

[dependency-groups]
dev = [
    "gitpython>=3.1.44",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.0.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.13"
files = ["src", "tests"]
check_untyped_defs = true
no_implicit_optional = true
